Add Case Studies

--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
                     <p class="text-gray-500">60% time savings on data entry, allowing staff to focus on high-value client advisory services</p>
                 </div>
                 <div class="bg-white shadow-lg rounded-lg p-6">
-                    <h3 class="text-xl font-bold text-gray-900">Real Estate Agency</h3>
+                    <h3 class="text-xl font-bold text-gray-900">M&A Firm</h3>
                     <p class="mt-2 text-gray-600 font-semibold">Challenge:</p>
-                    <p class="text-gray-500">Struggling to manage growing client communications and property listings</p>
+                    <p class="text-gray-500">Struggling to manage growing client base</p>
                     <p class="mt-2 text-gray-600 font-semibold">Solution:</p>
-                    <p class="text-gray-500">Created an AI assistant to help agents draft listings and respond to initial inquiries</p>
+                    <p class="text-gray-500">Created an AI powered background service that collects data on client profiles and populates in Hubspot CRM</p>
                     <p class="mt-2 text-gray-600 font-semibold">Result:</p>
                     <p class="text-gray-500">Agents now handle 3x more leads while maintaining personal relationship with clients</p>
                 </div>
