--- a/apps.html
+++ b/apps.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SMB Automators - Our Apps</title>
+    <title>SMB Automators - Solutions</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .modal {
@@ -31,7 +31,7 @@
                 <div class="hidden sm:flex sm:items-center sm:space-x-8">
                     <a href="index.html#services" class="text-gray-700 hover:text-gray-900">Services</a>
                     <a href="index.html#about" class="text-gray-700 hover:text-gray-900">About</a>
-                    <a href="apps.html" class="text-gray-700 hover:text-gray-900">Apps</a>
+                    <a href="apps.html" class="text-gray-700 hover:text-gray-900">Solutions</a>
                     <a href="index.html#contact" class="text-gray-700 hover:text-gray-900">Contact</a>
                 </div>
             </div>
@@ -42,7 +42,7 @@
     <div id="apps" class="bg-white py-12 sm:py-16 lg:py-20">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center">
-                <h2 class="text-3xl font-extrabold text-gray-900 sm:text-4xl">Our Apps</h2>
+                <h2 class="text-3xl font-extrabold text-gray-900 sm:text-4xl">Our Solutions</h2>
                 <p class="mt-4 text-lg text-gray-500">Powerful automation tools to supercharge your business</p>
             </div>
             <div class="mt-12 grid gap-8 sm:grid-cols-2 lg:grid-cols-2">
@@ -50,7 +50,7 @@
                     <h3 class="text-xl font-bold text-gray-900">Workflow Optimizer</h3>
                     <p class="mt-2 text-gray-500">AI-powered task management and workflow analysis</p>
                     <div class="mt-4 flex justify-between items-center">
-                        <span class="text-lg font-semibold text-gray-900">$49/month</span>
+                        <span class="text-lg font-semibold text-gray-900">$3,500</span>
                         <button onclick="openModal('workflow-modal')" class="bg-black text-white px-4 py-2 rounded-md hover:bg-gray-800">
                             Learn More
                         </button>
