--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="hidden sm:flex sm:items-center sm:space-x-8">
                     <a href="#services" class="text-gray-700 hover:text-gray-900">Services</a>
                     <a href="#about" class="text-gray-700 hover:text-gray-900">About</a>
-                    <a href="apps.html" class="text-gray-700 hover:text-gray-900">Apps</a>
+                    <a href="apps.html" class="text-gray-700 hover:text-gray-900">Solutions</a>
                     <a href="#contact" class="text-gray-700 hover:text-gray-900">Contact</a>
                 </div>
             </div>
